@@ -17,12 +17,17 @@ namespace mfem
  * This facilities can be used for supporting applications wich require the handling of non matching meshes.
  * For instance: General multi-physics problems, fluid structure interaction, or even visulization of average
  * quanties within subvolumes.
- * This particular code is also used with LLNL's ParElag for large scale multilevel Monte Carlo simulations.
+ * This particular code is also used with LLNL for large scale multilevel Monte Carlo simulations.
  */
 class ParMortarAssembler
 {
 public:
 
+   /*!
+    * @brief constructs the object with source and destination spaces
+    * @param source the source space from where we want to transfer the discrete field
+    * @param destination the source space to where we want to transfer the discrete field
+    */
    ParMortarAssembler(
       const MPI_Comm comm,
       const std::shared_ptr<ParFiniteElementSpace> &source,
@@ -38,10 +43,22 @@ public:
     */
    bool Assemble(std::shared_ptr<HypreParMatrix> &B);
 
-   ///@brief if the transfer is to be performed multiple times use Assemble instead
+   /*!
+    * @brief transfer a function from source to destination. if the transfer is to be performed multiple times use Assemble instead
+    * @param src_fun the function associated with the source finite element space
+    * @param[out] dest_fun the function associated with the destination finite element space
+    * @param is_vector_fe set to true if vector FEM are used
+    * @return true if there was an intersection and the output can be used.
+    */
    bool Transfer(ParGridFunction &src_fun, ParGridFunction &dest_fun,
                  bool is_vector_fe = false);
 
+
+   /*!
+    * @brief This method must be called before Assemble or Transfer.
+    * It will assemble the operator in all intersections found.
+    * @param integrator the integrator object
+    */
    inline void AddMortarIntegrator(const std::shared_ptr<MortarIntegrator>
                                    &integrator)
    {
